Convert some o.e.ui.tests to plain JUnit
Reduce inheritance, simplify setup/teardown, improve assertions, etc.